<resources>
    <string name="app_name">FirstBlogApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login to your account</string>
    <string name="create_ac">Create new account</string>
    <string name="post">Post</string>

    <string name="post_title">Post Title</string>
    <string name="post_descriptionn">Post Description</string>
    <string name="date_created">Date created</string>
    <string name="post_description">Post Description...</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="create">Create Account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="welcome">Welcome to blog</string>
</resources>