<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/teal_700"
    app:cardBackgroundColor="@color/teal_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/add_btn" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/alfa_slab_one"
            android:paddingBottom="5dp"
            android:text="@string/post_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="monospace"
            android:gravity="start"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:text="@string/post_descriptionn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/timestampList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asar"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />


    </LinearLayout>


</androidx.cardview.widget.CardView>
